--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -450,6 +450,8 @@ Dasein:
       start: 432
     - end: 29
       start: 28
+    - start: 277
+    - start: 279
     SZ:
     - end: 137
       start: 134
@@ -1628,6 +1630,7 @@ Leben:
       start: 277
     - start: 282
     - start: 33
+    - start: 283
     WD:
     - start: 278
       suffix: f
@@ -1838,6 +1841,10 @@ Mythos:
   references:
     WD:
     - start: 273
+Möglichkeit:
+  references:
+    Vorarb29/30:
+    - start: 6
 Möglichkeit der λόγος:
   references:
     GA 29/30:
@@ -2124,6 +2131,9 @@ Philosophie:
       suffix: f
     - end: 282
       start: 280
+    Vorarb29/30:
+    - start: 6
+    - start: 7
     WiM:
     - start: 103
 Philosophieren:
@@ -2145,6 +2155,9 @@ Philosophieren:
       start: 31
     - end: 87
       start: 85
+    Vorarb29/30:
+    - start: 6
+    - start: 7
     WiM:
     - start: 122
 Physica:
@@ -2419,11 +2432,17 @@ Schwerkraft:
     - start: 282
     - start: 283
     - start: 285
+Seien im Ganzen als solches:
+  references:
+    Vorarb29/30:
+    - start: 6
 Seiende als solches:
   references:
     EM:
     - start: 18
     - start: 19
+    Vorarb29/30:
+    - start: 6
     WD:
     - start: 276
     WiM:
@@ -2500,6 +2519,8 @@ Sein und Zeit:
     - start: 433
     - start: 441
     - start: 44
+    Vorarb29/30:
+    - start: 6
     ZEG:
     - start: 63
   type: w
@@ -2663,9 +2684,16 @@ Stimmung:
     SZ:
     - end: 137
       start: 134
+    Vorarb29/30:
+    - start: 6
+    - start: 7
     WiM:
     - end: 111
       start: 110
+Subjeckt:
+  references:
+    Vorarb29/30:
+    - start: 7
 Subjekt:
   references:
     SvG:
@@ -2685,6 +2713,10 @@ System:
     GA 29/30:
     - start: 431
       suffix: f
+Tatsache:
+  references:
+    GA 29/30:
+    - start: 281
 Technik:
   references:
     G:
@@ -2769,6 +2801,9 @@ Transzendenz:
   references:
     GA 29/30:
     - start: 447
+    Vorarb29/30:
+    - start: 6
+    - start: 7
     WiM:
     - start: 115
     - start: 118
@@ -2782,6 +2817,12 @@ Trieb:
       start: 7
     - start: 11
     - start: 33
+Umwelt der Tiere:
+  references:
+    GA 29/30:
+    - start: 284
+  related:
+  - von Uexküll, Jakob Johann
 Uneigentlichkeit:
   references:
     GA 29/30:
@@ -3030,6 +3071,8 @@ Welt:
       suffix: f
     SZ:
     - start: 137
+    Vorarb29/30:
+    - start: 6
     WD:
     - start: 274
 Weltalter:
@@ -3126,6 +3169,10 @@ Wissenschaft:
       start: 277
     - end: 33
       start: 32
+    - end: 3
+      start: 1
+    - start: 15
+      suffix: f
     SvG:
     - start: 181
     - start: 185
@@ -3136,6 +3183,7 @@ Wissenschaft:
       start: 120
   related:
   - ἐπιστήμη
+  - positive Forschung
 Wissenschaft der Logik:
   author: Hegel, Georg Wilhelm Friedrich
   references:
@@ -3156,6 +3204,8 @@ Wort:
     - end: 447
       start: 446
     - start: 40
+    Vorarb29/30:
+    - start: 7
 Zeitalter:
   references:
     SvG:
@@ -3306,6 +3356,10 @@ causa:
   references:
     SvG:
     - start: 165
+das Andere:
+  references:
+    Vorarb29/30:
+    - start: 6
 das Wachsende:
   references:
     GA 29/30:
@@ -3317,6 +3371,10 @@ der Feldberg:
     HH:
     - start: 134
   type: g
+der Mensch:
+  references:
+    GA 16:
+    - start: 530
 dialektische Schein:
   parent: Schein
   references:
@@ -3393,6 +3451,9 @@ im Ganzen:
     - start: 441
     - start: 457
     - start: 6
+    Vorarb29/30:
+    - start: 6
+    - start: 7
     WiM:
     - end: 111
       start: 110
@@ -3436,6 +3497,10 @@ objektiv:
   references:
     EM:
     - start: 109
+positive Forschung:
+  references:
+    GA 29/30:
+    - start: 284
 potentia:
   references:
     WBPh:
@@ -3563,6 +3628,11 @@ unbestimmte Unmittelbare:
   references:
     SZ:
     - start: 3
+von Uexküll, Jakob Johann:
+  references:
+    GA 29/30:
+    - start: 284
+  type: p
 vulgäre Verstand:
   references:
     GA 29/30:
@@ -3574,6 +3644,7 @@ vulgäre Verstand:
     - start: 434
     - start: 258
       suffix: f
+    - start: 276
   related:
   - Alltäglichkeit
 weil:
