--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -342,6 +342,12 @@ Bewegtheit:
     - start: 296
   related:
   - κίνησις
+Bewußtsein:
+  references:
+    GA 29/30:
+    - start: 305
+    - start: 298
+    - start: 306
 Beziehung zu Seiendem als Solchem:
   references:
     GA 29/30:
@@ -421,6 +427,7 @@ Da-sein:
     GA 29/30:
     - start: 113
     - start: 31
+    - start: 301
     WiM:
     - start: 105
     - start: 110
@@ -457,6 +464,7 @@ Dasein:
       start: 28
     - start: 277
     - start: 279
+    - start: 301
     SZ:
     - end: 137
       start: 134
@@ -480,6 +488,7 @@ Dasein des Menschen:
       start: 10
       type: r
     - start: 282
+    - start: 301
     SvG:
     - start: 179
     - start: 189
@@ -492,6 +501,7 @@ Dasein im Menschen:
     GA 29/30:
     - start: 414
     - start: 31
+    - start: 305
     WiM:
     - start: 112
 Daseinsgeschichte:
@@ -620,12 +630,17 @@ Descartes:
     GA 29/30:
     - end: 84
       start: 82
+    - start: 305
   type: p
 Descartes, René:
   references:
     SvG:
     - start: 174
   type: p
+Dialektik:
+  references:
+    GA 29/30:
+    - start: 306
 Dichten:
   references:
     WD:
@@ -678,12 +693,22 @@ Eigentlichkeit:
     GA 29/30:
     - end: 427
       start: 426
+Einfühlung:
+  references:
+    GA 29/30:
+    - start: 298
+Einfühulung:
+  references:
+    GA 29/30:
+    - start: 304
 Elemente:
   references:
     WBPh:
     - start: 265
 Endlichkeit:
   references:
+    GA 29/30:
+    - start: 306
     WiM:
     - start: 118
 Endlichkeit des Daseins:
@@ -776,6 +801,8 @@ Existenz:
     - end: 433
       start: 432
     - start: 28
+    - start: 298
+    - start: 300
     SZ:
     - start: 135
     - start: 137
@@ -1343,6 +1370,8 @@ Hegel, Georg Wilhelm Friedrich:
     GA 29/30:
     - start: 420
     - start: 82
+    - start: 305
+      suffix: f
     SZ:
     - start: 3
     WBPh:
@@ -1481,6 +1510,8 @@ Ich:
   references:
     GA 29/30:
     - start: 84
+    - start: 305
+    - start: 302
 In lieblicher Bläue blühet...:
   author: Hölderlin, Friedrich
   references:
@@ -1537,6 +1568,7 @@ Kant und das Problem der Metaphysik:
   references:
     GA 29/30:
     - start: 441
+    - start: 306
   type: w
 Kant, Immanuel:
   metadata:
@@ -1549,6 +1581,8 @@ Kant, Immanuel:
     - end: 431
       start: 430
     - start: 485
+    - end: 306
+      start: 305
     WBPh:
     - start: 251
     - start: 272
@@ -1603,6 +1637,11 @@ Kritik der Reinen Vernunft:
     WBPh:
     - start: 272
   type: w
+Kritik der reinen Vernunft:
+  references:
+    GA 29/30:
+    - start: 306
+  type: w
 Kuinzige:
   references:
     FW:
@@ -1615,6 +1654,10 @@ Kulturphilosophie:
     GA 29/30:
     - end: 116
       start: 111
+Kunst:
+  references:
+    GA 29/30:
+    - start: 300
 Langeweile:
   references:
     EWI:
@@ -1636,6 +1679,7 @@ Leben:
     - start: 282
     - start: 33
     - start: 283
+    - start: 292
     WD:
     - start: 278
       suffix: f
@@ -1816,6 +1860,27 @@ Miteinandersein:
   references:
     GA 29/30:
     - start: 447
+Mitexistieren:
+  references:
+    GA 29/30:
+    - start: 301
+Mitgehen:
+  references:
+    GA 29/30:
+    - end: 302
+      start: 296
+    - start: 303
+      suffix: f
+  related:
+  - Einfühlung
+  - Mitexistieren
+Mitsein:
+  references:
+    GA 29/30:
+    - start: 301
+  related:
+  - Mitexistieren
+  - Mitgehen
 Mittelalter:
   references:
     EM:
@@ -1844,6 +1909,8 @@ Mussolini, Benito:
   type: p
 Mythos:
   references:
+    GA 29/30:
+    - start: 300
     WD:
     - start: 273
 Möglichkeit:
@@ -2576,6 +2643,18 @@ Selbigkeit der Philosophie:
   references:
     GA 29/30:
     - start: 259
+Sichversetzen:
+  references:
+    GA 29/30:
+    - end: 304
+      start: 295
+  related:
+  - Einfühlung
+  - Mitgehen
+Solipsismus:
+  references:
+    GA 29/30:
+    - start: 302
 Sonette an Orpheus:
   author: Rilke, Rainer Maria
   references:
@@ -2653,6 +2732,7 @@ Sprache:
     GA 29/30:
     - start: 442
       suffix: f
+    - start: 298
     WD:
     - start: 274
 Sprachgeist:
@@ -2718,6 +2798,8 @@ Subjeckt:
     - start: 7
 Subjekt:
   references:
+    GA 29/30:
+    - start: 305
     SvG:
     - start: 175
 Substantiv:
@@ -2785,6 +2867,13 @@ Tier:
     - start: 412
     - end: 445
       start: 442
+    - end: 294
+      start: 291
+    - end: 288
+      start: 284
+    - start: 298
+      suffix: f
+    - start: 303
     WD:
     - start: 277
     - start: 278
@@ -2957,6 +3046,7 @@ Verwandlung:
     - start: 428
       suffix: f
     - start: 259
+    - start: 298
     WiM:
     - start: 113
 Verwandlung des Daseins:
@@ -3298,6 +3388,11 @@ Zwiesel:
   references:
     SvG:
     - start: 155
+absoluten Idealismus:
+  references:
+    GA 29/30:
+    - start: 305
+    - start: 306
 actualitas:
   references:
     WBPh:
@@ -3496,9 +3591,12 @@ ja-und-nein-sagen:
     G:
     - start: 527
 menschliche Dasein:
+  parent: Dasein
   references:
     GA 29/30:
     - start: 44
+    - start: 302
+    - start: 306
 metaphysischen Begriffe:
   references:
     GA 29/30:
@@ -3669,6 +3767,8 @@ vulgäre Verstand:
       suffix: f
     - start: 276
     - start: 264
+    - start: 266
+      suffix: f
   related:
   - Alltäglichkeit
 weil:
