Voeg bijbelteksten toe
Add bibletexts

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1,4 +1,4 @@
-4 Ezra 7. 12:
+4 Esra 7. 12:
   references:
     GA 29/30:
     - start: 396
@@ -2411,12 +2411,6 @@ Rilke, Rainer Maria:
     - end: 285
       start: 283
   type: p
-Romans 8. 19:
-  author: Paulus
-  references:
-    GA 29/30:
-    - start: 396
-  type: w
 Ruhm:
   references:
     EM:
@@ -2432,6 +2426,14 @@ Rätsel:
   references:
     SZ:
     - start: 4
+Römer 8. 19:
+  author: Paulus
+  metadata:
+    urn: urn:cts:greekLit:tlg0031.tlg006:8.19
+  references:
+    GA 29/30:
+    - start: 396
+  type: w
 Sapphos:
   references:
     EM:
